mule-user-guide/v/3.4/extending.adoc
= Extending

Mule ESB provides a great deal of default functionality that you can use in your implementation. If you need different functionality, you can extend Mule as described on this page.

== Creating Extensions

You can create five basic types of extensions to Mule: projects, modules, transports, examples, and enterprise patterns.

* A *project* is a stand-alone Mule application.

* A *module* is a package of related functionality in Mule, such as the XML module, which provides XML-based utilities like filters and routers. For a list of the available modules you can use, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/modules-reference[Modules Reference].

* A *link:https://docs.mulesoft.com/mule-user-guide/v/3.4/connecting-using-transports[transport]* is a type of module that carries messages between Mule flows via a specific protocol. For a list of the available transports you can use, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/transports-reference[Transports Reference].

* An *example* is a sample application that you create to help users get up and running more quickly.

* A *catalog* is a Mule-created Maven archetype created to help Mule users create custom configuration patterns.

Mule provides Maven archetypes that create the templates for each of these types of functionality in seconds, including the configuration files, unit tests, and packages.

An archetype acts as a wizard, prompting you to provide input, and then creates template configuration, source, and unit test files. Furthermore, if you run an archetype on an existing project or module you created, Maven will update it for you.

When working with transports, note that you can link:https://docs.mulesoft.com/mule-user-guide/v/3.4/configuring-a-transport[configure an existing transport], or you can link:https://docs.mulesoft.com/mule-user-guide/v/3.4/creating-transports[create a new one]. The recommended approach is to try to use and configure an existing transport first.

* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/extending-components[Extending Components]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/custom-message-processors[Custom Message Processors]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/creating-example-archetypes[Creating Example Archetypes]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/creating-a-custom-xml-namespace[Creating a Custom XML Namespace]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/creating-module-archetypes[Creating Module Archetypes]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/creating-catalog-archetypes[Creating Catalog Archetypes]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/creating-project-archetypes[Creating Project Archetypes]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/creating-transports[Creating Transports]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/creating-custom-routers[Creating Custom Routers]

== Developing Your Extension

After using the Maven archetype to get started, the recommended practice is to use an integrated development environment (IDE) such as Eclipse or IntelliJ to develop your Mule project, transport, module, or example. The Mule IDE allows you to quickly get up and running developing with Mule in Eclipse. For more information, see Using IDEs.

== Promoting Your Extension

After you have created a new extension, you can create a project on GitHub. This allows you to share it with the Mule community so you can get feedback on the quality and design of the module before putting it into production.

== Internationalizing Mule

If you use Mule in countries where English is not spoken, you can extend Mule by internationalizing the strings in the messages and exceptions. Additionally, there are guidelines you should take into consideration to make sure your code handles different locales. For more information, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/internationalizing-strings[Internationalizing Strings].

== Creating Configuration Patterns

The creation of custom configuration patterns can allow you to reach new levels of productivity with Mule. Follow this tutorial for link:https://docs.mulesoft.com/mule-user-guide/v/3.4/creating-catalog-archetypes[starting to create your own patterns now].

